# multi_realm_cell

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_mangos.txt  Changelog.txt  Legend.TXT  PreLoad.cmake  README  TODO.txt  config.h.cmake  createprojects.bat  revision.h.in.cmake
dep_tc/bzip2/: CMakeLists.txt
dep_tc/gsoap/: CMakeLists.txt
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/src_cata/: CMakeLists.txt
src/src_cata/server/: CMakeLists.txt
src/src_cata/server/LuaEngine/: CMakeLists.txt  GlobalMethods.h  ItemMethods.h  LuaEngine.cpp  UnitMethods.h  WorldPacketMethods.h
src/src_cata/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist
src/src_cata/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/src_cata/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/src_cata/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/src_cata/server/collision/: BoundingIntervalHierarchy.cpp  CMakeLists.txt
src/src_cata/server/game/: CMakeLists.txt
src/src_cata/server/game/DataStores/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/src_cata/server/game/Handlers/: CharacterHandler.cpp  ChatHandler.cpp  ItemHandler.cpp  MiscHandler.cpp
src/src_cata/server/game/Miscellaneous/: SharedDefines.h
src/src_cata/server/game/Scripting/: ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  Scripting.rar  Scripting_wipe.rar
src/src_cata/server/game/Server/: WorldSocket.cpp
src/src_cata/server/game/Spells/: SpellEffects.cpp  SpellInfo.h  SpellScript.cpp  SpellScript.h
src/src_cata/server/scripts/: CMakeLists.txt
src/src_cata/server/scripts/Cataclysm/: CMakeLists.txt
src/src_cata/server/scripts/Commands/: CMakeLists.txt  cs_reload.cpp
src/src_cata/server/scripts/Custom/: CMakeLists.txt  resetduel.cpp
src/src_cata/server/scripts/EasternKingdoms/: CMakeLists.txt
src/src_cata/server/scripts/Events/: CMakeLists.txt
src/src_cata/server/scripts/Examples/: CMakeLists.txt  example_commandscript.cpp  example_creature.cpp  example_escort.cpp  example_gossip_codebox.cpp  example_misc.cpp  example_spell.cpp
src/src_cata/server/scripts/Kalimdor/: CMakeLists.txt
src/src_cata/server/scripts/Maelstrom/: CMakeLists.txt  deepholm.cpp  kezan.cpp  tol_barad.cpp  tolbarad_peninsula.cpp
src/src_cata/server/scripts/Mods/: CMakeLists.txt
src/src_cata/server/scripts/Northrend/: CMakeLists.txt
src/src_cata/server/scripts/OutdoorPvP/: CMakeLists.txt
src/src_cata/server/scripts/Outland/: CMakeLists.txt
src/src_cata/server/scripts/Pandaria/: CMakeLists.txt
src/src_cata/server/scripts/PrecompiledHeaders/: CMakeLists.txt  ScriptPCH.cpp  ScriptPCH.h
src/src_cata/server/scripts/Spells/: CMakeLists.txt  mastery_spells.cpp  spell_dk.cpp  spell_druid.cpp  spell_generic.cpp  spell_holiday.cpp  spell_hunter.cpp  spell_item.cpp  spell_mage.cpp  spell_paladin.cpp  spell_pet.cpp  spell_priest.cpp  spell_quest.cpp  spell_rogue.cpp  spell_shaman.cpp  spell_warlock.cpp  spell_warrior.cpp
src/src_cata/server/scripts/World/: CMakeLists.txt
src/src_cata/server/shared/: CMakeLists.txt  SystemConfig.h
src/src_cata/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  resource.h  worldserver.conf.dist
src/src_cata/server/worldserver/CommandLine/: CliRunnable.cpp  CliRunnable.h
src/src_cata/server/worldserver/RemoteAccess/: RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h
src/src_cata/server/worldserver/TCSoap/: TCSoap.cpp  TCSoap.h
src/src_cata/server/worldserver/WorldThread/: WorldRunnable.cpp  WorldRunnable.h
src/src_cata/tools/: CMakeLists.txt
src/src_cata/tools/map_extractor/: CMakeLists.txt
src/src_cata/tools/mesh_extractor/: CMakeLists.txt
src/src_cata/tools/mmaps_generator/: CMakeLists.txt
src/src_cata/tools/vmap4_assembler/: CMakeLists.txt
src/src_cata/tools/vmap4_extractor/: CMakeLists.txt
src/src_mop/: CMakeLists.txt
src/src_wotlk/: CMakeLists.txt
src/src_wotlk/server/: CMakeLists.txt
src/src_wotlk/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/src_wotlk/server/authserver/Authentication/: AuthCodes.h
src/src_wotlk/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/src_wotlk/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/src_wotlk/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  CMakeLists.txt  VMapDefinitions.h  VMapTools.h
src/src_wotlk/server/collision/Management/: IVMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/src_wotlk/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/src_wotlk/server/collision/Models/: ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/src_wotlk/server/game/: CMakeLists.txt
src/src_wotlk/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/src_wotlk/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/src_wotlk/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/src_wotlk/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/src_wotlk/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/src_wotlk/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
src/src_wotlk/server/game/Calendar/: Calendar.cpp  Calendar.h
src/src_wotlk/server/game/Chat/: Chat.cpp  Chat.h
src/src_wotlk/server/scripts/: CMakeLists.txt
src/src_wotlk/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/src_wotlk/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  innormative_words.txt.dist  letter_analogs.txt.dist  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
(+1020 files in other folders)
